# kafka-python

./: .env  .gitignore  README.md  main.py  pyproject.toml
src/: main.py  producer.py
src/dao/: connection_factory.py  product_dao.py
src/dtos/: product_dto.py
src/jobs/: consultar_endero_por_cep_job.py
src/middlewares/: rate_limiter_middleware.py
src/models/: product.py
src/routes/: product_route.py
src/services/: product_service.py
