[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["Kaio Martins <kaio.martins2@aluno.unip.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.0"
uvicorn = {extras = ["standard"], version = "^0.30.5"}



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
