[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["Kaio Martins <kaio.martins2@aluno.unip.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.0"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
schedule = "^1.2.2"
requests = "^2.32.3"
confluent-kafka = "^2.5.0"
pymongo = {extras = ["srv"], version = "^4.8.0"}



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
